hphp/test/zend/bad/tests-classes/factory_and_singleton_010.php
<?php
class test {

  private function __destruct() {
  	echo __METHOD__ . "\n";
  }
}

$obj = new test;

?>
===DONE===